--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
         body {
             margin: 0;
             padding: 0;
-            height: 100vh;
+            background-color: #f8f8f8;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #f0f0f0;
+            height: 100vh;
         }
         iframe {
             width: 90%;
             height: 95vh;
             border: none;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
     </style>
 </head>
