--- a/index.html
+++ b/index.html
@@ -4,25 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Презентация "Адат"</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             margin: 0;
-            padding: 0;
+            padding: 1em;
             background-color: #f8f8f8;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            font-family: sans-serif;
+            text-align: center;
         }
         iframe {
-            width: 90%;
-            height: 95vh;
+            width: 100%;
+            height: 90vh;
             border: none;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        .pdf-link {
+            display: none;
+            margin-top: 1em;
+        }
+        @media (max-width: 768px) {
+            iframe {
+                display: none;
+            }
+            .pdf-link {
+                display: block;
+                font-size: 18px;
+                color: blue;
+            }
         }
     </style>
 </head>
 <body>
+    <h1>Презентация "Адат"</h1>
     <iframe src="адат.pdf"></iframe>
+    <div class="pdf-link">
+        <a href="адат.pdf" target="_blank">Открыть PDF-презентацию</a>
+    </div>
 </body>
 </html>
